@@ -1,1 +1,2 @@
 1. iteration_statement fourth for statement : added a ;
+2. All double operator implementation may fail. Check it.
